<?xml version="1.0"?>
<package format="2">
    <name>bambi</name>
    <version>0.1.0</version>
    <description>github.com/BambiSaver</description>
    
    <maintainer email="m@florian.world">Florian Mahlknecht</maintainer>
    <maintainer email="michael.rimondi@outlook.it">Michael Rimondi</maintainer>
    <license>GPLv3</license>
    <url type="website">https://wiki.bambi.florian.world</url>
    <author email="m@florian.world">Florian Mahlknecht</author>
    <author email="michael.rimondi@outlook.it">Michael Rimondi</author>
    
    
    <!-- The *depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
    <depend>roscpp</depend>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>mavros_msgs</depend>
    <depend>bambi_msgs</depend>
    <depend>geodesy</depend>
</package>
