<?xml version="1.0"?>
<package format="2">
    <name>bambi_msgs</name>
    <version>0.1.0</version>
    <description>Provides the message definitions used to comunicate between nodes from the BAMBI project</description>
    
    
    <maintainer email="m@florian.world">Florian Mahlknecht</maintainer>
    <maintainer email="michael.rimondi@outlook.it">Michael Rimondi</maintainer>
    <license>GPLv3</license>
    <url type="website">https://wiki.bambi.florian.world</url>
    <author email="m@florian.world">Florian Mahlknecht</author>
    <author email="michael.rimondi@outlook.it">Michael Rimondi</author>
    


    <buildtool_depend>catkin</buildtool_depend>
    
    
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    
    <depend>geographic_msgs</depend>
    <depend>mavros_msgs</depend>
    

</package>
